# swift-string-name-conflict

./: CMakeLists.txt  Package.swift
Sources/AK/: String.h  module.modulemap
Sources/MyLib/: MyLib.swift
